@@ -88,9 +88,12 @@ mapFacadeAsEJB=false
 #out of portal 
 #helpPrefix=help/
 #
-# if the help is out of our project
+# if the help is out of our project start the URL with http: or https:
 #helpPrefix=http://openxavatest.wikispaces.com/
 #helpSuffix=
+#
+# If you want to add the language as suffix (en, es, fr, etc.) end the URL with _
+# helpPrefix=http://openxavatest.wikispaces.com/help_
 
 # Settings for @Stereotype("FILE")
 # The default implementation uses the file system. You can set the storage directory 
